@@ -43,7 +43,7 @@ DESTDIR="$RPM_BUILD_ROOT" make install
 %doc README ChangeLog COPYING NEWS DISCLAIMER DISCLAIMER.UC
 # It doesn't matter if the user chooses a 32bit or 64bit target.  The
 # packaging must work off whatever Perl is installed.
-%define _perldir %(perl -e 'use Config; $T=$Config{installsitearch}; $T=~/(.*)\\/site_perl.*/; print $1;')
+%define _perldir %(perl -e 'use Config; $T=$Config{installsitearch}; $P=$Config{siteprefix}; $T=~/$P\\/(.*)\\/site_perl.*/; print "%{_prefix}/$1\\n"')
 %{_mandir}/man3/*
 %{_includedir}/*
 %{_libdir}/libgendersllnl.*
