@@ -3,6 +3,9 @@
         * compat/Makefile.am, src/Gendersllnl/Makefile.am: Revert
 	portability fixes.
 
+	* src/Libgendersllnl/Makefile.am, gendersllnl.spec.in: Fix
+	portability issues.
+
 2009-08-11  Albert Chu  <chu11@llnl.gov>
 
         * compat/Makefile.am, src/Gendersllnl/Makefile.am: Fix portability
